examples/errors/include-with-not-a-parameter/a.temple
before
{% include "b.temple" with notaparam = "x" %}
after
